# serena

./: .gitignore  BEYOND_MCP_ANALYSIS.md  BEYOND_MCP_ANALYSIS_REBUILT.md  BEYOND_MCP_BASELINE.md  BEYOND_MCP_PART8_INTEGRATION_MODES.md  CLI_USAGE.md  CUSTOM_TOOLS.md  Cargo.toml  DEPENDENCY_HEALTH_REPORT.md  DEPENDENCY_QUICK_FIXES.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REBUILD_README.md  Dockerfile  FINAL_REPORT.md  GEMINI.md  IMPLEMENTATION_SUMMARY_INSERT_AFTER_SYMBOL.md  MCP_CONFIG_CHANGES.md  Makefile.toml  ONBOARDING_TOOLS_IMPLEMENTATION.md  PROJECT_SUMMARY.md  PYTHON_LIBRARY_API.md  PYTHON_TOOL_API_INVENTORY.md  PYTHON_TO_RUST_TYPE_MAPPINGS.md  RUST_ARCHITECTURE_DIAGRAMS.md  RUST_BUILD_CONFIG_EXAMPLE.md  RUST_CODE_EXAMPLES.md  RUST_MCP_ARCHITECTURE.md  RUST_MCP_QUICK_START.md  RUST_MCP_RESEARCH.md  RUST_MIGRATION_ANALYSIS.md  RUST_MIGRATION_ARCHITECTURE.md  RUST_MIGRATION_DETAILED_ANALYSIS.md  RUST_MIGRATION_PATTERNS.md  RUST_MIGRATION_ROADMAP.md  RUST_MIGRATION_SUMMARY.md  RUST_PYTHON_EQUIVALENCE_TEST_MATRIX.md  RUST_REMAKE_FEATURE_INVENTORY.md  RUST_REMAKE_REVIEW_REPORT.md  RUST_TOOL_INVENTORY_COMPLETE.md  RUST_TOOL_INVENTORY_SUMMARY.md  (+21 more)
.claude/: settings.json
.claude/context/: INDEX.md  QUICK_LOAD.md  serena-migration-2025-12-25.md  serena-post-consolidation-2025-12-25.md  serena-production-readiness-2025-12-25.md  serena-rust-dashboard-indicator-2025-12-22.md  serena-rust-mcp-implementation-2025-12-21.md  serena-rust-migration-2025-12-25.md  serena-rust-modernization-2025-12-21.md  serena-technical-debt-2025-12-25.md
.githooks/: post-checkout  post-merge  pre-commit
.serena/memories/: adding_new_language_support_guide.md
archive/serena_core_complete/: Cargo.toml
archive/serena_core_complete/benches/: lsp_benchmarks.rs  mcp_benchmarks.rs
archive/serena_core_complete/src/: lib.rs  test_utils.rs
archive/serena_core_complete/src/lsp/: client.rs  mod.rs
archive/serena_core_complete/src/symbol_graph/: mod.rs
archive/serena_core_complete/src/web/: mod.rs
archive/serena_core_complete/tests/: integration_tests.rs  test_execute_shell_command.rs  test_execute_shell_command_simple.rs  test_onboarding_tools.rs
archive/serena_core_complete/tests/integration/: README.md  file_tools_tests.rs  mcp_protocol_tests.rs  memory_tools_tests.rs  mod.rs  symbol_tools_tests.rs
archive/serena_core_legacy/: cli.rs  cmd_tools.rs  config_tools.rs  file_tools.rs  handler.rs  mcp_error.rs  mcp_mod.rs  mcp_server.rs  memory_tools.rs  project_host.rs  services.rs  symbol_tools.rs  tools_mod.rs  utils.rs
archive/serena_core_legacy/lsp/: resources.rs
crates/serena/: Cargo.toml  README.md
crates/serena-cli/: Cargo.toml
crates/serena-cli/src/: args.rs  lib.rs
crates/serena-cli/src/commands/: mod.rs  start.rs
crates/serena-commands/: Cargo.toml
crates/serena-commands/src/: lib.rs  tools.rs
crates/serena-config/: Cargo.toml  README.md
crates/serena-config/src/: context_mode.rs  language.rs  lib.rs  loader.rs  project.rs  serena_config.rs  service.rs  tools.rs
crates/serena-core/: Cargo.toml
crates/serena-core/src/: error.rs  lib.rs  prompts.rs  registry.rs  test_utils.rs  types.rs
crates/serena-core/src/traits/: lsp.rs  mod.rs  storage.rs  tool.rs
crates/serena-dashboard/: Cargo.toml  index.html
crates/serena-dashboard/src/: api.rs  lib.rs
crates/serena-dashboard/src/components/: mod.rs  runtime_badge.rs  stats.rs
crates/serena-dashboard/styles/: dashboard.css
crates/serena-lsp/: Cargo.toml
crates/serena-lsp/src/: cache.rs  client.rs  lib.rs  manager.rs  resources.rs  tools.rs
crates/serena-lsp/src/languages/: mod.rs
crates/serena-mcp/: Cargo.toml
crates/serena-mcp/src/: lib.rs  protocol.rs  server.rs
crates/serena-mcp/src/transport/: http.rs  stdio.rs
crates/serena-mcp/tests/: stdio_integration.rs
crates/serena-memory/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/serena-memory/src/: error.rs  lib.rs  manager.rs  memory.rs  store.rs  tools.rs
crates/serena-symbol/: Cargo.toml
crates/serena-symbol/src/: cache.rs  lib.rs  tools.rs
crates/serena-tools/: Cargo.toml
crates/serena-tools/src/: factory.rs  lib.rs  registry.rs
crates/serena-tools/src/editor/: mod.rs
crates/serena-tools/src/file/: find.rs  list.rs  mod.rs  read.rs  replace.rs  search.rs  write.rs
crates/serena-tools/src/workflow/: mod.rs
crates/serena-web/: Cargo.toml
crates/serena-web/src/: api.rs  http.rs  lib.rs  server.rs  sse.rs
crates/serena/src/: app.rs  lib.rs  main.rs
crates/serena/tests/: app_integration.rs
docs/: HTTP_IMPLEMENTATION_SUMMARY.md  HTTP_TRANSPORT.md  UNWRAP_ELIMINATION_SUMMARY.md
scripts/: benchmark_mistral_rs.py  clean-nul.ps1  fetch_resources_rust.py  fix-dependencies.bat  fix-dependencies.sh  install-hooks.ps1  start_rust_server.py
serena_core/: Cargo.toml  pyproject.toml
serena_core/benches/: lsp_benchmarks.rs  mcp_benchmarks.rs
serena_core/src/: lib.rs  project_host.rs  test_utils.rs
serena_core/src/lsp/: client.rs  mod.rs  resources.rs
serena_core/src/mcp/: error.rs  handler.rs  mod.rs  server.rs
serena_core/src/mcp/tools/: file_tools.rs  memory_tools.rs  mod.rs  services.rs  symbol_tools.rs
serena_core/src/symbol_graph/: mod.rs
serena_core/src/web/: mod.rs
src/serena/: cli.py  dashboard.py  perf.py  project.py  text_utils.py
src/serena/resources/dashboard/: dashboard.css  dashboard.js  index.html
src/serena/tui/: __init__.py  app.py  exec.py  project.py  state.py
src/serena/util/: file_system.py
src/solidlsp/: ls.py  ls_utils.py
src/solidlsp/language_servers/: bash_language_server.py  elm_language_server.py  erlang_language_server.py  gopls.py  intelephense.py  perl_language_server.py  r_language_server.py  rust_analyzer.py  scala_language_server.py  typescript_language_server.py  vts_language_server.py  yaml_language_server.py
src/solidlsp/util/: subprocess_util.py
test/: PERFORMANCE_TESTING_STRATEGY.md
test/harness/: __init__.py  assertions.py  fixtures.py  performance.py
test/performance/: __init__.py  test_symbol_performance.py
test/serena/: test_serena_agent.py  test_text_utils.py
