[workspace]
members = [
    # NOTE: serena_core removed - all code migrated to crates/*
    # See archive/serena_core_legacy/ for historical reference
    "crates/serena-core",
    "crates/serena-config",
    "crates/serena-tools",
    "crates/serena-symbol",
    "crates/serena-commands",
    "crates/serena-mcp",
    "crates/serena-lsp",
    "crates/serena-memory",
    "crates/serena-cli",
    "crates/serena-web",
    "crates/serena-dashboard",
    "crates/serena",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Serena Contributors"]
repository = "https://github.com/serena-ai/serena"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# MCP Protocol
rmcp = { version = "0.9", features = ["server", "macros", "transport-io"] }

# LSP and JSON-RPC
lsp-types = "0.97"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "0.8"

# Web server
axum = "0.7"
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "color"] }

# Concurrency
dashmap = "6.1"
parking_lot = "0.12"
rayon = "1.10"

# Patterns and text processing
regex = "1.11"
glob = "0.3"
globset = "0.4"

# File system and archives
walkdir = "2.5"
ignore = "0.4"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"

# Utilities
directories = "5.0"
chrono = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.20"

# Graph data structures
petgraph = "0.6"

# NOTE: PyO3 removed - serena_core with Python bindings archived
# If Python bindings are needed, create crates/serena-ffi instead

# WASM and Web Frontend
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
gloo-net = "0.6"
gloo-timers = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true

# WASM release profile - optimized for size
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
