[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "serena-core"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
]

[project.optional-dependencies]
# No extras yet

[tool.maturin]
bindings = "pyo3"
module-name = "serena_core"
