[package]
name = "serena-cli"
version.workspace = true
edition.workspace = true

[dependencies]
serena-core = { path = "../serena-core" }
serena-config = { path = "../serena-config" }
serena-mcp = { path = "../serena-mcp" }
# serena-web will be added when the crate is created
# serena-web = { path = "../serena-web" }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }

[features]
default = []
# web = ["serena-web"]  # Enable when serena-web crate exists
