[package]
name = "serena-config"
version.workspace = true
edition.workspace = true

[dependencies]
serena-core = { path = "../serena-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
