[package]
name = "serena-core"
version.workspace = true
edition.workspace = true
description = "Core types, traits, and utilities for the Serena MCP server"

[features]
default = []
test-utils = []  # Enable test utilities for external use
test-fixtures = ["test-utils", "tempfile"]  # Enable test project fixtures

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
lsp-types = { workspace = true }

# Optional dependencies for test utilities
tempfile = { version = "3.10", optional = true }

[dev-dependencies]
tempfile = "3.10"
