[package]
name = "serena-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
serena-core = { path = "../serena-core" }
tokio = { workspace = true, features = ["io-std", "io-util", "sync", "macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt"] }
