[package]
name = "serena-memory"
version.workspace = true
edition.workspace = true

[dependencies]
serena-core = { path = "../serena-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
directories = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
