[package]
name = "serena-tools"
version.workspace = true
edition.workspace = true

[dependencies]
serena-core = { path = "../serena-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
glob = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
